Wed Jan 13 03:24:06 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue.h,
        * ace/Message_Queue_T.cpp: Moved the code

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */
  
          from ace/Message_Queue.h to ace/Message_Queue_T.cpp since that
          is more localized.

Wed Jan 13 02:54:10 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/XtReactor/XtReactor.cpp: Removed stray tabs.  Thanks to
          Johnny for reporting this.

Tue Jan 12 20:25:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Disable run_test.pl checking for some directories that
          aren't converted yet

Tue Jan 12 19:52:04 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Time_Value.inl:
          Fixed typo.

        * ace/config-openbsd.h:
          Removed ACE_LACKS_STRFTIME.

Tue Jan 12 19:41:07 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-integritySCA.h:
          Removed ACE_LACKS_FILE_FCNTL. It is no longer used.

Tue Jan 12 19:36:32 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
          Removed ACE_LACKS_EXECINFO_H. It is no longer used.

Tue Jan 12 19:33:25 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/os_include/netinet/os_tcp.h:
        * configure.ac:
          Fixed typo.

Tue Jan 12 19:28:32 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-integritySCA.h:
          Removed ACE_LACKS_USER. It is no longer used.

Tue Jan 12 19:24:54 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-netbsd.h:
          Removed ACE_LACKS_WSCANF. It is no longer used.

Tue Jan 12 19:22:23 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-mvs.h:
          Removed ACE_LACKS_SYS_NERR. It is no longer used.

Tue Jan 12 19:19:26 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-netbsd.h: